--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
     <meta name="description" content="Online Resume | Portfolio | Personal Website">
-    <title>Aiana's Home Page'</title>
+    <title>Aiana's Home Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,19 +13,19 @@
     <div id="content">
         <header>
             <div class="logo-box">
-                <a href="index.html"><img src="logo.png" alt="Aiana Cartoon"></a>
+                <a href="/index.html"><img src="logo.png" alt="Logo"></a>
             </div>
             <div class="navbar">
-                <a class="active" href="index.html">Home</a>
-                <a href="cv.html" target="_blank">CV</a>
-                <a href="contactme.html" target="_blank">Contact Me</a>
+                <a class="active" href="/index.html">Home</a>
+                <a href="cv.html">CV</a>
+                <a href="mailto:akdgrubio@byui.edu">Contact Me</a>
             </div>
         </header>
 
         <body>
             <div class="container">
                 <div class="side-bar">
-                    <a href="webdev.html">Web Development</a>
+                    <a href="./webdev/webdev.html">Web Development</a>
                     <a href="python.html">Python</a>
                     <a href="java.html">Java Android Development</a>
                     <a href="others.html">Other Work</a>
