Added JavaScript and WDD Assignments

--- a/webdev/webdev.html
+++ b/webdev/webdev.html
@@ -47,6 +47,8 @@
                         <li><a href="./week11/assign11.html">Week 11</a></li>
                         <li><a href="./week12/assign12.html">Week 12</a></li>
                         <li><a href="./week13/assign13.html">Week 13</a></li>
+                        <li><a href="./javascript">JavaScript</a></li>
+                        <li><a href="./wdd130/rafting.html">White Water Rafting Website</a></li>
                     </ul>
                 </main>
             </div>
