Fixed internal links

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="container">
                 <div class="side-bar">
                     <a href="./webdev/webdev.html">Web Development</a>
-                    <a href="python.html">Python</a>
-                    <a href="java.html">Java Android Development</a>
-                    <a href="others.html">Other Work</a>
+                    <a href="./python/python.html">Python</a>
+                    <a href="./java/java.html">Java Android Development</a>
+                    <a href="./others/others.html">Other Work</a>
                 </div>
                 <main>
                     <div class="home-img">
