--- a/cv.html
+++ b/cv.html
@@ -25,10 +25,10 @@
         <body>
             <div class="container">
                 <div class="side-bar">
-                    <a href="webdev.html">Web Development</a>
-                    <a href="python.html">Python</a>
-                    <a href="java.html">Java Android Development</a>
-                    <a href="others.html">Other Work</a>
+                    <a href="./webdev/webdev.html">Web Development</a>
+                    <a href="./python/python.html">Python</a>
+                    <a href="./java/java.html">Java Android Development</a>
+                    <a href="./others/others.html">Other Work</a>
                 </div>
                 <main>
                     <div class="cv-img">
