Added Java Projects and essays

--- a/java/java.html
+++ b/java/java.html
@@ -35,9 +35,10 @@
                     </h1>
                     <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
                     <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
-                        <li><a href="">Pong</a></li>
-                        <li><a href="">Skeet</a></li>
-                        <li><a href="">Asteroids</a></li>
+                        <li><a href="https://github.com/aiana-dgr/GameofLife">Game of Life</a></li>
+                        <li><a href="https://github.com/aiana-dgr/WeatherApp">Weather App</a></li>
+                        <li><a href="https://github.com/aiana-dgr/favorite-scripture">Scripture App</a></li>
+                        <li><a href="https://github.com/aiana-dgr/counting_app">Counting App</a></li>
                     </ul>
                 </main>
             </div>
