--- a/others/essays/essays.html
+++ b/others/essays/essays.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
     <meta name="description" content="Online Resume | Portfolio | Personal Website">
     <title>Python Projects</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../style.css">
 </head>
 
 <body>
@@ -16,8 +16,8 @@
                 <a href="../index.html"><img src="logo.png" alt="Aiana Cartoon"></a>
             </div>
             <div class="navbar">
-                <a href="../index.html">Home</a>
-                <a href="../cv.html">CV</a>
+                <a href="../../index.html">Home</a>
+                <a href="../../cv.html">CV</a>
                 <a href="mailto:akdgrubio@byui.edu">Contact Me</a>
             </div>
         </header>
@@ -25,19 +25,21 @@
         <body>
             <div class="container">
                 <div class="side-bar">
-                    <a href="../webdev/webdev.html">Web Development</a>
-                    <a href="../python/python.html">Python</a>
-                    <a href="../java/java.html">Java Android Development</a>
-                    <a href="others.html">Other Work</a>
+                    <a href="../../webdev/webdev.html">Web Development</a>
+                    <a href="../../python/python.html">Python</a>
+                    <a href="../../java/java.html">Java Android Development</a>
+                    <a href="../others.html">Other Work</a>
                 </div>
                 <main>
                     <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">Python Programs
                     </h1>
                     <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
                     <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
-                        <li><a
-                                href="https://webmailbyui-my.sharepoint.com/:f:/g/personal/akdgrubio_byui_edu/EpZxj7AwJUhLt9w6hYmvHB0Bcn4XzNUoYoRdihsa03X8dw?e=Lxk807">Essays</a>
-                        </li>
+                        <li><a href="love.html">Love Letter</a></li>
+                        <li><a href="believe.html">This I Believe</a></li>
+                        <li><a href="critical.html">Critical Thinking</a></li>
+                        <li><a href="persuasive.html">Persuasive Essay</a></li>
+                        <li><a href="personal.html">Personal Essay</a></li>
                     </ul>
                 </main>
             </div>
