Fixed links and updated stylesheet

--- a/webdev/webdev.html
+++ b/webdev/webdev.html
@@ -31,22 +31,21 @@
                     <a href="../others/others.html">Other Work</a>
                 </div>
                 <main>
-                    <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">CS 213
-                        Assignments</h1>
+                    <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">Web Dev Projects</h1>
                     <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
                     <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
-                        <li><a href="assign02.html">Week 02</a></li>
-                        <li><a href="./week03/assign03.html">Week 03</a></li>
-                        <li><a href="./week04/assign04.html">Week 04</a></li>
-                        <li><a href="./week05/assign05.html">Week 05</a></li>
-                        <li><a href="./week06/assign06.html">Week 06</a></li>
-                        <li><a href="./week07/assign07.html">Week 07</a></li>
-                        <li><a href="./week08/assign08.html">Week 08</a></li>
-                        <li><a href="./week09/assign09.html">Week 09</a></li>
-                        <li><a href="./week10/assign10.html">Week 10</a></li>
-                        <li><a href="./week11/assign11.html">Week 11</a></li>
-                        <li><a href="./week12/assign12.html">Week 12</a></li>
-                        <li><a href="./week13/assign13.html">Week 13</a></li>
+                        <li><a href="assign02.html">Personal Page</a></li>
+                        <li><a href="./week03/assign03.html">Enhanced Personal Page</a></li>
+                        <li><a href="./week04/assign04.html">Business Site</a></li>
+                        <li><a href="./week05/assign05.html">Responsive Design</a></li>
+                        <li><a href="./week06/assign06.html">Fictitious University</a></li>
+                        <li><a href="./week07/assign07.html">JavaScript Mortgage Calculator</a></li>
+                        <li><a href="./week08/assign08.html">JS Form Validation</a></li>
+                        <li><a href="./week09/assign09.html">AJAX Mortgage Calculator</a></li>
+                        <li><a href="./week10/assign10.html">PHP and JSON</a></li>
+                        <li><a href="./week11/assign11.html">PHP Form</a></li>
+                        <li><a href="./week12/assign12.html">Mileage Calculator</a></li>
+                        <li><a href="./week13/assign13.html">Piano Student Registration</a></li>
                         <li><a href="./javascript">JavaScript</a></li>
                         <li><a href="./ac/home.html">Arcade Codes Website</a></li>
                         <li><a href="./wdd130/rafting.html">White Water Rafting Website</a></li>
