--- a/others/others.html
+++ b/others/others.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
     <meta name="description" content="Online Resume | Portfolio | Personal Website">
-    <title>Python Projects</title>
+    <title>Aiana | Other Work</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -31,7 +31,7 @@
                     <a href="others.html">Other Work</a>
                 </div>
                 <main>
-                    <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">Python Programs
+                    <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">Other Work
                     </h1>
                     <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
                     <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
