Validated cleaned up code

--- a/java/java.html
+++ b/java/java.html
@@ -22,44 +22,44 @@
             </div>
         </header>
 
-        <body>
-            <div class="container">
-                <div class="side-bar">
-                    <a href="../webdev/webdev.html">Web Development</a>
-                    <a href="../python/python.html">Python</a>
-                    <a href="java.html">Java Android Development</a>
-                    <a href="../others/others.html">Other Work</a>
-                </div>
-                <main>
-                    <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">Java | Android Projects
-                    </h1>
-                    <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
-                    <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
-                        <li><a href="https://github.com/aiana-dgr/GameofLife">Game of Life</a></li>
-                        <li><a href="https://github.com/aiana-dgr/WeatherApp">Weather App</a></li>
-                        <li><a href="https://github.com/aiana-dgr/favorite-scripture">Scripture App</a></li>
-                        <li><a href="https://github.com/aiana-dgr/counting_app">Counting App</a></li>
-                    </ul>
-                </main>
+        <div class="container">
+            <div class="side-bar">
+                <a href="../webdev/webdev.html">Web Development</a>
+                <a href="../python/python.html">Python</a>
+                <a href="java.html">Java Android Development</a>
+                <a href="../others/others.html">Other Work</a>
             </div>
-            <footer>
-                <p>Aiana Kamil D. Rubio</p>
-                <hr>
-                <div id="social">
-                    <a href="https://www.facebook.com/ryanaiana.rubio.1/" target="_blank">
-                        <img src="facebook.png" alt="Facebook icon">
-                    </a>
-                    <a href="https://www.linkedin.com/in/aiana-de-guzman-rubio-bb1847195/" target="_blank">
-                        <img src="linkedin.png" alt="LinkedIn icon">
-                    </a>
-                    <a href="https://m.me/ryanaiana.rubio.1" target="_blank">
-                        <img src="messenger.png" alt="Messenger icon">
-                    </a>
-                </div>
-                <span>
-                    Aiana Rubio 2020
-                </span>
-            </footer>
+            <main>
+                <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">Java | Android
+                    Projects
+                </h1>
+                <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
+                <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
+                    <li><a href="https://github.com/aiana-dgr/GameofLife">Game of Life</a></li>
+                    <li><a href="https://github.com/aiana-dgr/WeatherApp">Weather App</a></li>
+                    <li><a href="https://github.com/aiana-dgr/favorite-scripture">Scripture App</a></li>
+                    <li><a href="https://github.com/aiana-dgr/counting_app">Counting App</a></li>
+                </ul>
+            </main>
+        </div>
+        <footer>
+            <p>Aiana Kamil D. Rubio</p>
+            <hr>
+            <div id="social">
+                <a href="https://www.facebook.com/ryanaiana.rubio.1/" target="_blank">
+                    <img src="facebook.png" alt="Facebook icon">
+                </a>
+                <a href="https://www.linkedin.com/in/aiana-de-guzman-rubio-bb1847195/" target="_blank">
+                    <img src="linkedin.png" alt="LinkedIn icon">
+                </a>
+                <a href="https://m.me/ryanaiana.rubio.1" target="_blank">
+                    <img src="messenger.png" alt="Messenger icon">
+                </a>
+            </div>
+            <span>
+                Aiana Rubio 2020
+            </span>
+        </footer>
     </div>
 </body>
 
