--- a/webdev/webdev.html
+++ b/webdev/webdev.html
@@ -22,54 +22,54 @@
             </div>
         </header>
 
-        <body>
-            <div class="container">
-                <div class="side-bar">
-                    <a href="webdev.html">Web Development</a>
-                    <a href="../python/python.html">Python</a>
-                    <a href="../java/java.html">Java Android Development</a>
-                    <a href="../others/others.html">Other Work</a>
-                </div>
-                <main>
-                    <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">Web Dev Projects</h1>
-                    <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
-                    <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
-                        <li><a href="assign02.html">Personal Page</a></li>
-                        <li><a href="./week03/assign03.html">Enhanced Personal Page</a></li>
-                        <li><a href="./week04/assign04.html">Business Site</a></li>
-                        <li><a href="./week05/assign05.html">Responsive Design</a></li>
-                        <li><a href="./week06/assign06.html">Fictitious University</a></li>
-                        <li><a href="./week07/assign07.html">JavaScript Mortgage Calculator</a></li>
-                        <li><a href="./week08/assign08.html">JS Form Validation</a></li>
-                        <li><a href="./week09/assign09.html">AJAX Mortgage Calculator</a></li>
-                        <li><a href="./week10/assign10.html">PHP and JSON</a></li>
-                        <li><a href="./week11/assign11.html">PHP Form</a></li>
-                        <li><a href="./week12/assign12.html">Mileage Calculator</a></li>
-                        <li><a href="./week13/assign13.html">Piano Student Registration</a></li>
-                        <li><a href="./javascript">JavaScript</a></li>
-                        <li><a href="./ac/home.html">Arcade Codes Website</a></li>
-                        <li><a href="./wdd130/rafting.html">White Water Rafting Website</a></li>
-                    </ul>
-                </main>
+        <div class="container">
+            <div class="side-bar">
+                <a href="webdev.html">Web Development</a>
+                <a href="../python/python.html">Python</a>
+                <a href="../java/java.html">Java Android Development</a>
+                <a href="../others/others.html">Other Work</a>
             </div>
-            <footer>
-                <p>Aiana Kamil D. Rubio</p>
-                <hr>
-                <div id="social">
-                    <a href="https://www.facebook.com/ryanaiana.rubio.1/" target="_blank">
-                        <img src="facebook.png" alt="Facebook icon">
-                    </a>
-                    <a href="https://www.linkedin.com/in/aiana-de-guzman-rubio-bb1847195/" target="_blank">
-                        <img src="linkedin.png" alt="LinkedIn icon">
-                    </a>
-                    <a href="https://m.me/ryanaiana.rubio.1" target="_blank">
-                        <img src="messenger.png" alt="Messenger icon">
-                    </a>
-                </div>
-                <span>
-                    Aiana Rubio 2020
-                </span>
-            </footer>
+            <main>
+                <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">Web Dev Projects
+                </h1>
+                <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
+                <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
+                    <li><a href="assign02.html">Personal Page</a></li>
+                    <li><a href="./week03/assign03.html">Enhanced Personal Page</a></li>
+                    <li><a href="./week04/assign04.html">Business Site</a></li>
+                    <li><a href="./week05/assign05.html">Responsive Design</a></li>
+                    <li><a href="./week06/assign06.html">Fictitious University</a></li>
+                    <li><a href="./week07/assign07.html">JavaScript Mortgage Calculator</a></li>
+                    <li><a href="./week08/assign08.html">JS Form Validation</a></li>
+                    <li><a href="./week09/assign09.html">AJAX Mortgage Calculator</a></li>
+                    <li><a href="./week10/assign10.html">PHP and JSON</a></li>
+                    <li><a href="./week11/assign11.html">PHP Form</a></li>
+                    <li><a href="./week12/assign12.html">Mileage Calculator</a></li>
+                    <li><a href="./week13/assign13.html">Piano Student Registration</a></li>
+                    <li><a href="./javascript">JavaScript</a></li>
+                    <li><a href="./ac/home.html">Arcade Codes Website</a></li>
+                    <li><a href="./wdd130/rafting.html">White Water Rafting Website</a></li>
+                </ul>
+            </main>
+        </div>
+        <footer>
+            <p>Aiana Kamil D. Rubio</p>
+            <hr>
+            <div id="social">
+                <a href="https://www.facebook.com/ryanaiana.rubio.1/" target="_blank">
+                    <img src="facebook.png" alt="Facebook icon">
+                </a>
+                <a href="https://www.linkedin.com/in/aiana-de-guzman-rubio-bb1847195/" target="_blank">
+                    <img src="linkedin.png" alt="LinkedIn icon">
+                </a>
+                <a href="https://m.me/ryanaiana.rubio.1" target="_blank">
+                    <img src="messenger.png" alt="Messenger icon">
+                </a>
+            </div>
+            <span>
+                Aiana Rubio 2020
+            </span>
+        </footer>
     </div>
 </body>
 
