Fixed mobile view. Included side bar contents on top navbar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
     <meta name="description" content="Online Resume | Portfolio | Personal Website">
-    <meta property="og:image" content="https://github.com/aiana-dgr/aianarubio/preview.png"
+    <meta property="og:image" content="https://github.com/aiana-dgr/aianarubio/preview.png">
     <title>Aiana's Home Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
