--- a/index.html
+++ b/index.html
@@ -36,19 +36,17 @@
                 </div>
                 <div class="home-grid">
                     <h1>Get to Know Me</h1>
-                    <p>Hi! My name is <i>Aiana</i>. <br>
-                        I am from the <b>Philippines</b>, specifically from its culinary capital - Pampanga!
-                        About two years ago was when my husband and I decided to move here and we have been loving
-                        it
-                        ever
-                        since
-                        because
-                        of the good food, less traffic and less crowd in this city. I am originally from the most
-                        populous city of this country - Quezon
-                        City, Metro Manila.<br><br>
+                    <p>Hi! My name is <i>Aiana</i>.
+                        I currently live in the province of Pampanga, known as the culinary capital of the
+                        <strong>Philippines</strong>.
+                        I am originally from the most populous city of this country, Quezon City, Metro Manila, but
+                        together with our two little boys, my husband and I moved here about 2 years ago. We can't say
+                        enough how much we love it here because traffic is way better; it's less crowded; and the food
+                        is just excellent!
+                        <br><br>
                         I'm a straight A programming student of the BYU-Idaho Online Degree Program, majoring in
-                        <strong>Applied
-                            Technology</strong>. I have studied from basic to advanced Web development,
+                        <strong><u>Applied
+                            Technology</u></strong>. I have studied from basic to advanced Web development,
                         Object-Oriented Programming, Data Structures, Software Design and Development with focus on
                         Android
                         App Development using Java, Game Development with Python and Data Analytics using Python and
