Fixed side bar hover

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                         enough how much we love it here because traffic is way better; it's less crowded; and the food
                         is just excellent!
                         <br><br>
-                        I'm a straight A programming student of the BYU-Idaho Online Degree Program, majoring in
+                        I'm a straight-A programming student of the BYU-Idaho Online Degree Program, majoring in
                         <strong><u>Applied
-                            Technology</u></strong>. I have studied from basic to advanced Web development,
+                            Technology</u></strong>. I have studied basic to advanced Web Development,
                         Object-Oriented Programming, Data Structures, Software Design and Development with focus on
                         Android
                         App Development using Java, Game Development with Python and Data Analytics using Python and
