Converted word essay files to HTML

--- a/others/essays/essays.html
+++ b/others/essays/essays.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
-    <meta name="description" content="Online Resume | Portfolio | Personal Website">
+    <meta name="description" content="Portfolio | Essays">
     <title>Python Projects</title>
     <link rel="stylesheet" href="../../style.css">
 </head>
