--- a/others/others.html
+++ b/others/others.html
@@ -35,7 +35,7 @@
                 <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
                 <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
                     <li><a
-                            href="https://webmailbyui-my.sharepoint.com/:f:/g/personal/akdgrubio_byui_edu/EpZxj7AwJUhLt9w6hYmvHB0Bcn4XzNUoYoRdihsa03X8dw?e=Lxk807">Essays</a>
+                            href="./essays/essays.html">Essays</a>
                     </li>
                 </ul>
             </main>
