--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <br><br>
                         I'm a straight-A programming student of the BYU-Idaho Online Degree Program, majoring in
                         <strong><u>Applied
-                            Technology</u></strong>. I have studied basic to advanced Web Development,
+                                Technology</u></strong>. I have studied basic to advanced Web Development,
                         Object-Oriented Programming, Data Structures, Software Design and Development with focus on
                         Android
                         App Development using Java, Game Development with Python and Data Analytics using Python and
@@ -81,6 +81,15 @@
             </span>
         </footer>
     </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/7.15.5/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/7.15.5/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
 </body>
 
 </html>
