Added github link

--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
             <p>Aiana Kamil D. Rubio</p>
             <hr>
             <div id="social">
-                <a href="https://www.facebook.com/ryanaiana.rubio.1/" target="_blank">
-                    <img src="facebook.png" alt="Facebook icon">
+                <a href="https://github.com/aiana-dgr" target="_blank">
+                    <img src="github.png" alt="Github icon">
                 </a>
                 <a href="https://www.linkedin.com/in/aiana-de-guzman-rubio-bb1847195/" target="_blank">
                     <img src="linkedin.png" alt="LinkedIn icon">
+                </a>
+                <a href="https://www.facebook.com/ryanaiana.rubio.1/" target="_blank">
+                    <img src="facebook.png" alt="Facebook icon">
                 </a>
                 <a href="https://m.me/ryanaiana.rubio.1" target="_blank">
                     <img src="messenger.png" alt="Messenger icon">
