--- a/webdev/webdev.html
+++ b/webdev/webdev.html
@@ -46,7 +46,7 @@
                     <li><a href="./week11/assign11.html">PHP Form</a></li>
                     <li><a href="./week12/assign12.html">Mileage Calculator</a></li>
                     <li><a href="./week13/assign13.html">Piano Student Registration</a></li>
-                    <li><a href="./javascript">JavaScript</a></li>
+                    <li><a href="./javascript/">JavaScript</a></li>
                     <li><a href="./ac/home.html">Arcade Codes Website</a></li>
                     <li><a href="./wdd130/rafting.html">White Water Rafting Website</a></li>
                 </ul>
@@ -56,11 +56,14 @@
             <p>Aiana Kamil D. Rubio</p>
             <hr>
             <div id="social">
-                <a href="https://www.facebook.com/ryanaiana.rubio.1/" target="_blank">
-                    <img src="facebook.png" alt="Facebook icon">
+                <a href="https://github.com/aiana-dgr" target="_blank">
+                    <img src="github.png" alt="Github icon">
                 </a>
                 <a href="https://www.linkedin.com/in/aiana-de-guzman-rubio-bb1847195/" target="_blank">
                     <img src="linkedin.png" alt="LinkedIn icon">
+                </a>
+                <a href="https://www.facebook.com/ryanaiana.rubio.1/" target="_blank">
+                    <img src="facebook.png" alt="Facebook icon">
                 </a>
                 <a href="https://m.me/ryanaiana.rubio.1" target="_blank">
                     <img src="messenger.png" alt="Messenger icon">
