Placed video home banner and changed cv theme

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                 <a href="./others/others.html">Other Work</a>
             </div>
             <main>
+                <div class="banner-box">
+                    <video autoplay loop muted>
+                        <source src="Aiana.mp4" type="video/mp4">
+                    </video>
+                    <h1>Aiana Rubio</h1>
+                </div>
                 <div class="home-img">
                     <img src="family.jpg" alt="Aiana's family">
                 </div>
