Trying to fix social preview

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
-    <meta name="description" content="Online Resume | Portfolio | Personal Website">
-    <meta property="og:image" content="https://github.com/aiana-dgr/aianarubio/preview.png">
+    <meta name="image" property="og:image" content="https://repository-images.githubusercontent.com/274951261/49baa900-b75e-11ea-87c4-f204c5acafe1">
+    <meta name="description" property="og:description" content="Online Resume | Portfolio | Personal Website">
     <title>Aiana's Home Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -37,6 +37,7 @@
                     </video>
                     <h1>Aiana Rubio</h1>
                 </div>
+                <hr class="hrmob">
                 <div class="home-img">
                     <img src="family.jpg" alt="Aiana's family">
                 </div>
