--- a/python/python.html
+++ b/python/python.html
@@ -30,14 +30,78 @@
                 <a href="../others/others.html">Other Work</a>
             </div>
             <main>
-                <h1 style="text-align: center; color:rgb(243, 192, 26);; font-family: Lucida Sans;">Python Programs
-                </h1>
-                <hr style="height:3px;border-width:0;color:rgb(243, 192, 26);background-color:rgb(243, 192, 26);">
-                <ul style="text-align: center; list-style-position: inside; color: rgb(243, 192, 26);">
-                    <li><a href="https://github.com/aiana-dgr/pong">Pong</a></li>
-                    <li><a href="https://github.com/aiana-dgr/skeet">Skeet</a></li>
-                    <li><a href="https://github.com/aiana-dgr/asteroids">Asteroids</a></li>
-                </ul>
+                <div class="games-grid">
+                    <article class="game-pong" id="pong">
+                        <div class="vid">
+                            <iframe allow="autoplay; gyroscope;" allowfullscreen height="100%"
+                                referrerpolicy="strict-origin" src="https://www.kapwing.com/e/5e8ddcaec2a93000147a29b2"
+                                title="Embedded content made with Kapwing">
+                            </iframe>
+                        </div>
+                        <h2>My Version of the Simple Pong Game</h2>
+                        <p class="pong-paragraph-1">
+                            File: pong.py<br>
+                            Original Author: Br. Burton<br>
+                            Designed to be completed by others<br>
+                            Code and Design completed by Aiana<br>
+                            This program implements a simplistic version of the
+                            classic Pong arcade game.
+                            <br>
+                            <br>
+                            Above is a video clip of the gameplay of the program.
+                        </p>
+                        <p class="pong-paragraph-2">
+                            To see Pong's code and design files <a href="https://github.com/aiana-dgr/pong"
+                                target="_blank">Click here</a>.
+                        </p>
+                    </article>
+                    <article class="game-skeet" id="skeet">
+                        <div class="vid">
+                            <iframe allow="autoplay; gyroscope;" allowfullscreen height="100%"
+                                referrerpolicy="strict-origin" src="https://www.kapwing.com/e/5e8de5beb5bdab0015eb6d0d"
+                                title="Embedded content made with Kapwing">
+                            </iframe>
+                        </div>
+                        <h2>My Version of the Simple Skeet Game</h2>
+                        <p class="skeet-paragraph-1">
+                            File: skeet.py<br>
+                            Original Author: Br. Burton<br>
+                            Designed to be completed by others<br>
+                            Code and Design completed by Aiana<br>
+                            This program implements an awesome version of skeet.
+                            <br>
+                            <br>
+                            Above is a video clip of the gameplay of the program.
+                        </p>
+                        <p class="skeet-paragraph-2">
+                            To see Skeet's python code and design files <a href="https://github.com/aiana-dgr/skeet"
+                                target="_blank">Click here</a>..
+                        </p>
+                    </article>
+                    <article class="game-asteroids" id="asteroids">
+                        <div class="vid">
+                            <iframe allow="autoplay; gyroscope;" allowfullscreen height="100%"
+                                referrerpolicy="strict-origin" src="https://www.kapwing.com/e/5e8dd8fab5bdab0015eae158"
+                                title="Embedded content made with Kapwing">
+                            </iframe>
+                        </div>
+                        <h2>My Version of an Asteroids Game</h2>
+                        <p class="asteroids-paragraph-1">
+                            File: asteroids.py<br>
+                            Original Author: Br. Burton<br>
+                            Designed to be completed by others<br>
+                            Code and Design completed by Aiana<br>
+                            This program implements my version of a space shooting game.
+                            <br>
+                            <br>
+                            Above is a video clip of the gameplay of the program.
+                        </p>
+                        <p class="asteroids-paragraph-2">
+                            To see Asteroid's python code and design files <a
+                                href="https://github.com/aiana-dgr/asteroids" target="_blank">Click here</a>..
+                        </p>
+                    </article>
+                </div>
             </main>
         </div>
         <footer>
