Added 2page CV images

--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,8 @@
             </div>
             <main>
                 <div class="cv-img">
-                    <img src="cv.png" alt="Aiana's CV">
+                    <img src="cv1.png" alt="Aiana's CV1">
+                    <img src="cv2.png" alt="Aiana's CV2">
                 </div>
             </main>
         </div>
