Updates profile summary

--- a/index.html
+++ b/index.html
@@ -44,12 +44,10 @@
                 <div class="home-grid">
                     <h1>Get to Know Me</h1>
                     <p>Hi! My name is <i>Aiana</i>.
-                        I currently live in the province of Pampanga, known as the culinary capital of the
-                        <strong>Philippines</strong>.
-                        I am originally from the most populous city of this country, Quezon City, Metro Manila, but
-                        together with our two little boys, my husband and I moved here about 2 years ago. We can't say
-                        enough how much we love it here because traffic is way better; it's less crowded; and the food
-                        is just excellent!
+                        A meticulous and creative web developer with passion for building responsive websites. 
+                        A firm believer of the mobile-first approach. Aspiring to combine strong technical skills 
+                        to provide high-impact solutions for diverse industry organizations and excel as a Front-End Developer. 
+                        Proficient in HTML, CSS, JavaScript; plus modern libraries and frameworks.
                         <br><br>
                         I'm a straight-A programming student of the BYU-Idaho Online Degree Program, majoring in
                         <strong><u>Applied
