--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         its libraries.<br><br>
                         I made this website to serve as my online portfolio to showcase the things I've learned and
                         the
-                        skills that I have acquired from the courses that I've taken thus far.
+                        skills that I have acquired thus far.
                     </p>
 
                     <blockquote>"Continuous effort - not strength or intelligence - is the key to unlocking our
