Adding actual videos, replacing embedded webpages.

--- a/python/python.html
+++ b/python/python.html
@@ -33,10 +33,9 @@
                 <div class="games-grid">
                     <article class="game-pong" id="pong">
                         <div class="vid">
-                            <iframe allow="autoplay; gyroscope;" allowfullscreen height="100%"
-                                referrerpolicy="strict-origin" src="https://www.kapwing.com/e/5e8ddcaec2a93000147a29b2"
-                                title="Embedded content made with Kapwing">
-                            </iframe>
+                            <video autoplay loop>
+                                <source src="Pong.mp4" type="video/mp4">
+                            </video>
                         </div>
                         <h2>My Version of the Simple Pong Game</h2>
                         <p class="pong-paragraph-1">
@@ -57,10 +56,9 @@
                     </article>
                     <article class="game-skeet" id="skeet">
                         <div class="vid">
-                            <iframe allow="autoplay; gyroscope;" allowfullscreen height="100%"
-                                referrerpolicy="strict-origin" src="https://www.kapwing.com/e/5e8de5beb5bdab0015eb6d0d"
-                                title="Embedded content made with Kapwing">
-                            </iframe>
+                            <video autoplay loop>
+                                <source src="Skeet.mp4" type="video/mp4">
+                            </video>
                         </div>
                         <h2>My Version of the Simple Skeet Game</h2>
                         <p class="skeet-paragraph-1">
@@ -80,10 +78,9 @@
                     </article>
                     <article class="game-asteroids" id="asteroids">
                         <div class="vid">
-                            <iframe allow="autoplay; gyroscope;" allowfullscreen height="100%"
-                                referrerpolicy="strict-origin" src="https://www.kapwing.com/e/5e8dd8fab5bdab0015eae158"
-                                title="Embedded content made with Kapwing">
-                            </iframe>
+                            <video autoplay loop>
+                                <source src="Asteroids.mp4" type="video/mp4">
+                            </video>
                         </div>
                         <h2>My Version of an Asteroids Game</h2>
                         <p class="asteroids-paragraph-1">
