Adjusted video dimension and added controls

--- a/python/python.html
+++ b/python/python.html
@@ -33,7 +33,7 @@
                 <div class="games-grid">
                     <article class="game-pong" id="pong">
                         <div class="vid">
-                            <video autoplay loop>
+                            <video width="320" height="240" autoplay loop>
                                 <source src="Pong.mp4" type="video/mp4">
                             </video>
                         </div>
@@ -56,7 +56,7 @@
                     </article>
                     <article class="game-skeet" id="skeet">
                         <div class="vid">
-                            <video autoplay loop>
+                            <video width="320" height="240" controls>
                                 <source src="Skeet.mp4" type="video/mp4">
                             </video>
                         </div>
@@ -78,7 +78,7 @@
                     </article>
                     <article class="game-asteroids" id="asteroids">
                         <div class="vid">
-                            <video autoplay loop>
+                            <video width="320" height="240" controls>
                                 <source src="Asteroids.mp4" type="video/mp4">
                             </video>
                         </div>
